<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adventure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_start_screen">Start an Adventure</string>
    <string name="button_start">Start</string>
    <string name="text_view_alley_screen_description">Alley screen</string>
    <string name="text_view_room_description">Room screen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_message">You have ventured down a dark alley, where would you like to go next?</string>
    <string name="button_go_left">Go Left</string>
    <string name="button_continue">Continue</string>
    <string name="button_go_right">Go Right</string>
    <string name="text_view_winning">Winning</string>
    <string name="text_view_losing_screen">Losing Screen</string>
    <string name="text_view_winning_screen">Winning Screen</string>
    <string name="button_door_one">Enter Door 1</string>
    <string name="button_door_two">Enter Door 2</string>
    <string name="text_view_win">You\'ve reached the gold!</string>
    <string name="button_restart">Restart</string>
    <string name="text_view_lose">You\'ve fallen into the pit of despair</string>
    <string name="button_restart_2">Restart</string>
    <string name="set_your_name">Set your name</string>
    <string name="personalize_your_msg">Personalize the loser mesage</string>
    <string name="action_bar_title">Action Bar title</string>
    <string name="pref_username_summary">Set your name here</string>
    <string name="pref_username_title">User name</string>
    <string name="pref_category_customization">pref category custom</string>
    <string name="default_username">default username</string>
    <string name="default_level">easy</string>
    <string name="user_intro">user intro</string>
    <string name="title_activity_settings">Act Settings</string>
    <string name="pref_difficulty_title">Difficulty Level</string>
    <string name="pref_difficulty_summary">Choose the difficulty level</string>
    <string name="pref_win_msg_title">Winner message</string>
    <string name="pref_win_msg_summary">personalize the winner message</string>
    <string name="pref_lose_msg_title">Loser message</string>
    <string name="pref_lose_msg_summary">personalize the loser message</string>
</resources>
