<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_view_losing_screen"
            android:id="@+id/text_view_losing_screen"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.32"
            android:gravity="center"
            android:background="#ffff3e22"
            android:textSize="50dp"
            android:textColor="#ffffffff"
            android:layout_marginTop="6dp" />

        <TextView
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_view_lose"
            android:id="@+id/text_view_win"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.12"
            android:background="#ffff6447"
            android:textSize="30dp"
            android:layout_marginTop="12dp"
            android:gravity="center" />

        <Button
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:text="@string/button_restart_2"
            android:id="@+id/button_restart_2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.09" />

    </LinearLayout>
</LinearLayout>